Making chipmunk physics

--- a/project.json
+++ b/project.json
@@ -9,14 +9,17 @@
     "renderMode" : 0,
     "engineDir":"frameworks/cocos2d-html5",
 
-    "modules" : ["cocos2d"],
+    "modules" : ["cocos2d","chipmunk"],
 
-     "jsList" : [
+    "jsList" : [
         "src/resource.js",
         "src/app.js",
         "src/AnimationLayer.js",
         "src/BackgroundLayer.js",
         "src/PlayScene.js",
-        "src/StatusLayer.js"
+        "src/StatusLayer.js",
+        "src/globals.js"
+
     ]
+
 }
