--- a/project.json
+++ b/project.json
@@ -4,7 +4,6 @@
     "debugMode" : 1,
     "showFPS" : true,
     "frameRate" : 60,
-    "noCache" : false,
     "id" : "gameCanvas",
     "renderMode" : 0,
     "engineDir":"frameworks/cocos2d-html5",
@@ -18,8 +17,8 @@
         "src/BackgroundLayer.js",
         "src/PlayScene.js",
         "src/StatusLayer.js",
-        "src/globals.js"
-
+        "src/globals.js",
+        "src/coin.js",
+        "src/rock.js"
     ]
-
 }
